--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,11 +41,14 @@ dependencies:
   intl: ^0.19.0
   timezone: ^0.7.0
   flutter_launcher_icons: ^0.13.1
+  google_nav_bar: ^5.0.6
   pdf: ^3.11.0
   printing: ^5.13.1
   path_provider: ^2.1.3
-  google_nav_bar: ^5.0.6
   share_plus: ^9.0.0
+  shared_preferences: ^2.2.3
+  flutter_speed_dial: ^7.0.0
+  flutter_lints: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +65,7 @@ dev_dependencies:
 flutter_launcher_icons: 
   android: true
   ios: true
-  image_path: "assets/images/icono_app.png"
+  image_path: "assets/images/icono_app3.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -78,7 +81,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-  #   - images/a_dot_ham.jpeg
+    - assets/fonts/OpenSans-Regular.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
