--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,8 +58,7 @@ dev_dependencies:
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  # rules and activating additional ones
   
   
 flutter_launcher_icons: 
