--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   csv: ^6.0.0
   excel: ^4.0.3
   intl: ^0.19.0
-  timezone: ^0.7.0
+  timezone: ^0.9.4
   flutter_launcher_icons: ^0.13.1
   google_nav_bar: ^5.0.6
   pdf: ^3.11.0
@@ -49,6 +49,9 @@ dependencies:
   shared_preferences: ^2.2.3
   flutter_speed_dial: ^7.0.0
   flutter_lints: ^3.0.0
+  firebase_messaging:
+  provider: 
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
