Cambios varios en vistas y ADMIN, OWNER, Auxiliar

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,9 @@ dependencies:
   firebase_messaging:
   provider: 
   http: ^0.13.3
-
+  fl_chart: ^0.68.0
+  carousel_slider: ^4.1.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
